# CatQuot

./: .gitignore  CHANGELOG.md  CatQuot.cabal  LICENSE  README.md  quotcat_logo.drawio
app/: CreateGraph.hs  Main.hs
app/Utils/: RandomComplex.hs  RandomMatrix.hs
docs/images/: .$graph_unet.xml.bkp  .$quotients.xml.bkp  .$quotients.xml.dtmp  catquot_logo.xml  graph_unet.xml  quotcat_logo.drawio  quotients.xml
docs/tex/: CatQuot.tex  NotesOnHaskell.bbl  NotesOnHaskell.blg  NotesOnHaskell.tex  NotesOnHaskell.toc
docs/tex/_minted/: DD39E7E3B69DE5FC1C5145EC713C380A.highlight.minted  _979C67CC907FA3A87E1EFDE66FFEB33B.index.minted
docs/tex/bib/: CatQuot.bib
src/MLGraph/: EdgePassHom.hs  Feature.hs  FeatureSet.hs  MessPassCat.hs  MessPassDiag.hs  Transformation.hs
src/MLGraph/QuotTower/: Quot.hs  Tower.hs
src/Utils/: RandomMatrix.hs
test/: Test.hs
test/MLGraph/: EdgePassHomSpec.hs  FeatureSetSpec.hs  FeatureSpec.hs  MessPassDiag.hs  MessPassDiagSpec.hs
test/Utils/: RandomComplexSpec.hs  RandomMatrixSpec.hs
