cabal-version:      3.0
name:               QuotCat
version:            0.1.0.0
synopsis:           [...]
-- description:
homepage:           https://github.com/TYLERSFOSTER/QuotCat
license:            MIT
license-file:       LICENSE
author:             TYLERSFOSTER
maintainer:         tylerisnotavailable@gmail.com
-- copyright:
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
                      Utils.RandomComplex
                      MLGraph.Feature
                      MLGraph.FeatureSet
    -- other-modules:
    -- other-extensions:
    build-depends:  base ^>=4.18.3.0,
                    vector,
                    random >= 1.1
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite QuotCat-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        QuotCat
