cabal-version:      3.0
name:               CatQuot
version:            0.1.0.0
synopsis:           [...]
homepage:           https://github.com/TYLERSFOSTER/CatQuot
license:            MIT
license-file:       LICENSE
author:             TYLERSFOSTER
maintainer:         tylerisnotavailable@gmail.com
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
                      MLGraph.Feature
                      MLGraph.FeatureSet
                      MLGraph.MessPassDiag
                      MLGraph.MessPassCat
                      MLGraph.QuotTower.Quot
                      MLGraph.QuotTower.Tower
    build-depends:    base ^>=4.18.3.0,
                      vector,
                      random >= 1.1,
                      hmatrix
    hs-source-dirs:   src
    default-language: Haskell2010


executable catquot-app
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    base ^>=4.18.3.0,
                      CatQuot,
                      vector,
                      random,
                      hmatrix
    default-language: Haskell2010
    other-modules:    Utils.RandomMatrix
                      Utils.RandomComplex

test-suite QuotCat-test
    import:           warnings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0,
                      CatQuot
    default-language: Haskell2010
