cabal-version:      3.0
name:               CatQuot
version:            0.1.0.0
synopsis:           [...]
homepage:           https://github.com/TYLERSFOSTER/CatQuot
license:            MIT
license-file:       LICENSE
author:             TYLERSFOSTER
maintainer:         tylerisnotavailable@gmail.com
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options:       -Wall

library
    import:            warnings
    exposed-modules:   MyLib
                       MLGraph.Feature
                       MLGraph.FeatureSet
                       MLGraph.EdgePassHom
                       MLGraph.MessPassDiag
                       MLGraph.MessPassCat
                       MLGraph.QuotTower.Quot
                       MLGraph.QuotTower.Tower
    hs-source-dirs:    src
    build-depends:     base ^>=4.18.3.0,
                       hmatrix,
                       hspec-discover,
                       random >= 1.1,
                       vector,
                       diagrams-lib,
                       diagrams-svg,
                       lens,
                       monoid-extras,
                       unordered-containers,
                       containers
    default-language:  Haskell2010

executable catquot-app
    import:            warnings
    main-is:           Main.hs
    hs-source-dirs:    app
    other-modules:     Utils.RandomComplex
                       Utils.RandomMatrix
    build-depends:     base ^>=4.18.3.0,
                       CatQuot,
                       hmatrix,
                       random,
                       vector
    default-language:  Haskell2010

test-suite catquot-test
    type:              exitcode-stdio-1.0
    main-is:           Test.hs
    hs-source-dirs:    test
                       app
    other-modules:     Utils.RandomComplex
                       Utils.RandomComplexSpec
                       Utils.RandomMatrix
                       Utils.RandomMatrixSpec
                       MLGraph.FeatureSpec
                       MLGraph.FeatureSetSpec
                       MLGraph.EdgePassHomSpec
    build-depends:     base,
                       CatQuot,
                       hmatrix,
                       hspec,
                       hspec-discover,
                       random,
                       vector,
                       numeric-prelude
    default-language:  Haskell2010
